--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,32 @@
-body{background:#000;}
+body{
+  background:#000;
+  font-family: Verdana;
+  color:#FFF;
+  text-align: center;
+}
+
+
+h1{
+  font-weight: normal;
+  font-size: 50px;
+}
+
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+
+
+p a {
+  color: Aquamarine;
+  font-size: 16px;
+}
+
+p{
+  color:gray;
+  font-size: 21px;
+}
+
+.footer p {
+  text-align: right;
+}
